--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 }
 .slider{
   position:relative;
-  background: #fda604;
+  background: #240A34;
   width: 800px;
   min-height: 500px;
   margin: 20px;
@@ -27,6 +27,11 @@ body{
   position: absolute;
   width: 100%;
   height: 100%;
+  clip-path: circle(0% at 0 50%);
+}
+.slider .slide.active{
+  clip-path: circle(150% at 0 50%);
+  transition: 1s;
 }
 .slider .slide img{
   position: absolute;
@@ -84,3 +89,31 @@ body{
   border-radius: 3px;
   box-shadow: 0 5px 25px rgb(1, 1, 1 / 20%);
 }
+.navigation-visability .slide-icon.active{
+  background: #fda604;
+}
+.control-btns{
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+}
+.control-btns button{
+  z-index: 999;
+  background: #ffedd8f3;
+  color: #240A34;
+  font-size: 17px;
+  font-weight: 800;
+  padding: 0.5em 1em;
+  border: transparent;
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+  transform: translateY(-50px);
+  margin: 12px 6px;
+  border-radius: 4px;
+  box-shadow: 0 5px 25px rgb(1, 1, 1 / 20%);
+  cursor: pointer;
+  justify-content: space-between;
+}
+.control-btns button:hover {
+  color:#fda604;
+  background: #240A34;
+ }
