--- a/style.css
+++ b/style.css
@@ -40,11 +40,12 @@ body{
   position: absolute;
 }
 .slider .slide .info{
-  width: 20%;
+  width: 50%;
   color: #891652;
   margin-top: 50px;
-  margin-left: 50px;
+  margin-left: 70px;
   text-align: center;
+  padding: 10px;
   position: absolute;
   border-radius: 10px;
   background: #ffedd8a9;
@@ -52,6 +53,11 @@ body{
 }
 .slider .slide .info h2{
   font-size: 2em;
+  font-weight: 800;
+}
+.slider .slide .info p{
+  font-size: 1em;
+  font-weight: 400;
 }
 .navigation{
   opacity: 0;
